feat: initial project conversion completed for domain approval. pending: pricing, social handles, active work timeline and other stuff, my works.

--- a/src/components/landing/AllScope.astro
+++ b/src/components/landing/AllScope.astro
@@ -8,8 +8,8 @@ import { devwork } from "../../data/devwork.json";
     <div
       class="col-span-full lg:col-span-2 w-full rounded-4xl h-full items-center inline-flex text-black"
     >
-      <h2 class="text-3xl tracking-tighter font-light">
-        What's on tap.
+      <h2 class="text-2xl lg:text-4xl tracking-tighter font-light">
+        What can I do?
       </h2>
     </div>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-px mt-8">
@@ -23,8 +23,7 @@ import { devwork } from "../../data/devwork.json";
               <>
                 <div class=" flex flex-col sm:flex-row justify-between gap-4 lg:items-end">
                   <p class="font-medium leading-6 text-zinc-500 text-sm flex gap-2 items-center">
-                    ⏤
-                    {template.title}
+                    ⏤{template.title}
                   </p>
                 </div>
               </>
@@ -42,8 +41,7 @@ import { devwork } from "../../data/devwork.json";
               <>
                 <div class=" flex flex-col sm:flex-row justify-between gap-4 lg:items-end">
                   <p class="font-medium leading-6 text-zinc-500 text-sm flex gap-2 items-center">
-                    ⏤
-                    {template.title}
+                    ⏤{template.title}
                   </p>
                 </div>
               </>
