--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,14 +10,15 @@ import Pricing from "@/components/landing/Pricing.astro";
 import Faq from "@/components/landing/Faq.astro";
 import Cta from "@/components/global/Cta.astro";
 ---
+
 <BaseLayout>
   <Hero />
-  <LogoCloud />
+  <!-- <LogoCloud /> -->
   <Work />
   <Howitworks />
   <AllScope />
   <Testimonials />
   <Pricing />
-  <Faq />
+  <!-- <Faq /> -->
   <Cta />
 </BaseLayout>
