--- a/src/components/landing/Howitworks.astro
+++ b/src/components/landing/Howitworks.astro
@@ -1,23 +1,18 @@
 <section class="scroll-mt-12" id="how">
   <div class="px-8 md:px-12 py-12 max-w-2xl mx-auto">
     <div>
-     <h2
-        class="text-2xl tracking-tighter  font-light lg:text-4xl text-black"
-      >
-    How it works
+      <h2 class="text-2xl tracking-tighter font-light lg:text-4xl text-black">
+        How i'm keeping up
       </h2>
     </div>
     <div>
       <p class="text-sm text-zinc-500 mt-8">
-        Once you join, you and your crew get an invite to our Breeew kanban board, where you can team up with minimal in real-time. From here, you can chat directly with minimal, shooting over as many design requests as you fancy.
+        I'm on my finals of my Computer Science degree, (wish me luck!) and I'm
+        currently working as a Associate Software Engineer at LOLCTECH, a
+        FinTech company in Sri Lanka.
         <br /><br />
-        I'll tackle each request step by step, and feel free to ask for as many tweaks as you need.
-
-
-
-
-
-
+        I'll tell you my story: (button will appear if my sorry procastinative ass
+        gets it together)
       </p>
     </div>
   </div>
