--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -1,5 +1,5 @@
 <section class="scroll-mt-4" id="pricing">
-  <div class="px-8 md:px-12 py-12 max-w-7xl mx-auto">
+  <!-- <div class="px-8 md:px-12 py-12 max-w-7xl mx-auto">
     <div
       class="grid grid-cols-1 gap-px md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
     >
@@ -465,5 +465,8 @@
         </div>
       </section>
     </div>
+  </div> -->
+  <div class="justify-center text-center">
+    Plans are still a work in progress!
   </div>
 </section>
