--- a/src/components/landing/Testimonials.astro
+++ b/src/components/landing/Testimonials.astro
@@ -1,10 +1,6 @@
-<section >
-  <div
-    class="px-8 md:px-12 py-12 max-w-2xl mx-auto"
-  >
+<section>
+  <div class="px-8 md:px-12 py-12 max-w-2xl mx-auto">
     <div class="relative overflow-hidden">
-
-
       <div
         class="container flex flex-col justify-center overflow-hidden md:flex-row"
         x-data="{ testimonialActive: 1 }"
@@ -18,30 +14,29 @@
                   style="display: none;"
                 >
                   <p
-                    class="font-medium leading-6 text-zinc-500 text-base text-balance  flex gap-2 items-center text-center mx-auto "
+                    class="font-medium leading-6 text-zinc-500 text-base text-balance flex gap-2 items-center text-center mx-auto"
                     x-show.transition="testimonialActive == 1"
                     style="display: none;"
                   >
-                    Michael is a true rarity, effortlessly bridging the realms
-                    of design and coding. His designs are masterfully polished,
+                    Nipun is a true rarity, effortlessly bridging the realms of
+                    design and coding. His designs are masterfully polished,
                     striking a perfect balance between being on trend and
-                    remaining distincltly original.
+                    remaining distinctly original.
                   </p>
                 </div><div x-show.immediate="testimonialActive === 2">
                   <p
-                    class="font-medium leading-6 text-zinc-500 text-base text-balance  flex gap-2 items-center text-center mx-auto  max-w-md"
+                    class="font-medium leading-6 text-zinc-500 text-base text-balance flex gap-2 items-center text-center mx-auto max-w-md"
                     x-show.transition="testimonialActive == 2"
                   >
-                    Michael is a rare breed of designer &amp; dev that
-                    understands business needs. He leveraged his previous
-                    experience to build out a few landings very quickly for
-                    Versoly.
+                    Nipun is a rare breed of designer &amp; dev that understands
+                    business needs. He leveraged his previous experience to
+                    build out a few landings very quickly for Versoly.
                   </p>
                 </div>
               </div><div class="flex items-center justify-center mt-6 lg:my-4">
                 <button
                   @click.prevent="testimonialActive = 1"
-                  class="inline-block mx-2 font-bold text-center rounded-full shadow-xs focus:outline-none focus:ring-2  size-12 opacity-50 bg-gradientdown"
+                  class="inline-block mx-2 font-bold text-center rounded-full shadow-xs focus:outline-none focus:ring-2 size-12 opacity-50 bg-gradientdown"
                   :class="{'size-12 opacity-50 bg-gradientdown ': testimonialActive != 1, 'opacity-100 bg-gradientdown text-white': testimonialActive == 1 }"
                   ><img
                     class="inline-block w-12 h-12 rounded-full grayscale border"
@@ -50,7 +45,7 @@
                   /></button
                 ><button
                   @click.prevent="testimonialActive = 2"
-                  class="inline-block mx-2 font-bold text-center rounded-full shadow-xs focus:outline-none focus:ring-2  opacity-100 bg-gradientdown text-white"
+                  class="inline-block mx-2 font-bold text-center rounded-full shadow-xs focus:outline-none focus:ring-2 opacity-100 bg-gradientdown text-white"
                   :class="{'size-12 opacity-50 bg-gradientdown ': testimonialActive != 2, 'opacity-100 bg-gradientdown text-white': testimonialActive == 2 }"
                   ><img
                     class="inline-block w-12 h-12 rounded-full grayscale border"
@@ -64,16 +59,16 @@
                   x-show="testimonialActive == 1"
                   style="display: none;"
                 >
-                  <h2 class="text-zinc-500 text-sm font-medium lg:text-base ">
-                    Tony Lea
+                  <h2 class="text-zinc-500 text-sm font-medium lg:text-base">
+                    Suthaharan Rasiah
                   </h2><a href="#" class="text-xs text-zinc-500"
-                    >Founder of DevDojo</a
+                    >Head of Mobile Solutions - LOLCTECH</a
                   >
                 </div><div class="text-center" x-show="testimonialActive == 2">
-                  <h2 class="text-zinc-500 text-sm font-medium lg:text-base ">
-                    Volkan Kaja
+                  <h2 class="text-zinc-500 text-sm font-medium lg:text-base">
+                    Seniya Sansith
                   </h2><a href="#" class="text-xs text-zinc-500">
-                    Founder of Versoly</a
+                    Founder of EventUp</a
                   >
                 </div>
               </div>
