--- a/src/components/landing/Work.astro
+++ b/src/components/landing/Work.astro
@@ -1,8 +1,7 @@
 <section class="scroll-mt-24" id="work">
-
   <div class="px-8 md:px-12 py-24 max-w-2xl mx-auto">
-    <h2 class="text-xl tracking-tighter font-light text-black">
-      Some of Minimal work.
+    <h2 class="text-2xl lg:text-4xl tracking-tighter font-light text-black">
+      Some of My work.
     </h2>
 
     <div
@@ -56,7 +55,7 @@
   }"
     >
       <div
-        class="flex flex-col w-full bg-white rounded-3xl pt-4  mt-4"
+        class="flex flex-col w-full bg-white rounded-3xl pt-4 mt-4"
         aria-labelledby="carousel-label"
         role="region"
         tabindex="0"
@@ -145,7 +144,7 @@
           >
             <img src="/riflesso.png" alt="" />
           </div>
-           <div
+          <div
             class="items-center justify-center w-full flex flex-col
           shrink-0 snap-start"
             role="option"
@@ -153,7 +152,7 @@
           >
             <img src="/bal.png" alt="" />
           </div>
-           <div
+          <div
             class="items-center justify-center w-full flex flex-col
           shrink-0 snap-start"
             role="option"
